# techstax

./: .gitignore  Dockerfile  README.md
static/: app.js  styles.css
webhook-repo/: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
webhook-repo/static/: index.html
